--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@l4logger/nodejs",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "Official L4Logger Log monitoring & exception reporter for NodeJS",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,9 @@
   "keywords": [
     "error",
     "l4logger",
-    "exception"
+    "exception",
+    "node logging",
+    "node js logs"
   ],
   "license": "MIT",
   "dependencies": {
